--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "4",
     "@mui/icons-material": "^5.1.1",
+    "@mui/lab": "^5.0.0-alpha.59",
     "@mui/material": "^5.2.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,6 +19,7 @@
     "@types/chart.js": "^2.9.34",
     "axios": "^0.24.0",
     "chart.js": "^2.9.4",
+    "date-fns": "^2.27.0",
     "fontsource-roboto": "^4.0.0",
     "react": "^16.14.0",
     "react-c3js": "^0.1.20",
